--- a/src/app/route/CategoryPage/CategoryPage.style.scss
+++ b/src/app/route/CategoryPage/CategoryPage.style.scss
@@ -22,7 +22,7 @@
         }
 
         @include tablet {
-            grid-template-columns: minmax(150px, 200px) auto;
+            grid-template-columns: minmax(200px, 270px) auto;
             grid-column-gap: 2rem;
         }
 
